Ip Address ui Alignment Fix

--- a/src/modules/Administrators/Printer Search/view/PrinterSearchstyle.css
+++ b/src/modules/Administrators/Printer Search/view/PrinterSearchstyle.css
@@ -1,75 +1,3 @@
-.dropDown {
-  height: 27px;
-  width: 10%;
-}
-
-strong {
-  color: red;
-}
-
-.endIp .MuiInputBase-formControl .MuiOutlinedInput-notchedOutline {
-  border: 1px solid #35b803;
-}
-
-.endIp .MuiInputBase-formControl .MuiOutlinedInput-notchedOutline:focus {
-  border: 1px solid #35b803 !important;
-  outline: #35b803 !important;
-  color: #35b803 !important;
-}
-
-.agent {
-  width: 165px;
-  font-weight: bold;
-  font-size: 16px;
-  display: inline-block;
-}
-
-.startIplabel {
-  width: 158px;
-  display: inline-block;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 33px;
-}
-
-.EndIplabel {
-  display: inline-block;
-  width: 158px;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 33px;
-}
-
-.MuiFormHelperText-contained {
-  margin-left: 3px !important;
-}
-
-.textField {
-  width: 28%;
-  margin-left: 8px !important;
-}
-
-.searchBtn {
-  color: white !important;
-  font-size: 15px !important;
-  margin-top: 20px !important;
-  margin-left: 165px !important;
-  width: 10% !important;
-}
-
-.divBtn {
-  width: 100%;
-  display: flex;
-  justify-content: right;
-}
-
-.wraplayout .formlabel {
-  line-height: 26px;
-  padding-left: 2px;
-  display: block;
-  font-size: 18px;
-}
-
 /* Loading Css */
 .LoadingDiv {
   width: 100%;
@@ -99,4 +27,75 @@ strong {
   border-radius: 5px;
   width: 40%;
   position: relative;
+}
+
+/* New Css */
+.agent-label-select-box-area {
+  display: flex;
+  align-items: center;
+}
+
+.agent-label-select-box-area .dropDown {
+  height: 40px;
+}
+
+.agent-label-select-box-area label.agent {
+  width: 20%;
+  font-size: 18px;
+}
+
+.startip-label-input-box-area {
+  display: flex;
+  align-items: center;
+}
+
+.startip-label-input-main-area {
+  margin: 15px 0px 15px 0px;
+}
+
+.startip-label-input-box-area label.startIplabel {
+  width: 20%;
+  font-size: 18px;
+}
+
+.startip-label-input-box-area label.paddingBottom {
+  padding-bottom: 24px;
+}
+
+.startip-label-input-box-area .textField {
+  width: 350px;
+}
+
+.endip-label-input-box-area {
+  display: flex;
+  align-items: center;
+}
+
+.endip-label-input-box-area label.EndIplabel {
+  width: 20%;
+  font-size: 18px;
+}
+
+.endip-label-input-box-area label.paddingBottom {
+  padding-bottom: 24px;
+}
+
+.endip-label-input-box-area .textField {
+  width: 350px;
+}
+
+.agent-start-end-smbtbtn-area {
+  display: flex;
+  align-items: center;
+}
+
+.agent-start-end-smbtbtn-area .EndIplabel {
+  width: 20%;
+  font-size: 18px;
+}
+
+.smbt-btn-area {
+  padding-left: 270px;
+  text-align: right;
+  margin: 15px 0px 0px 0px;
 }
